# deps-python

./: .gitignore  .travis.yml  Dockerfile  Pipfile  README.md  dependencies_component.yml  requirements.txt
.github/workflows/: deps.yml  test.yml
src/: act.py  collect.py  models.py
tests/collector/: dependencies_tests.yml
tests/collector/basic_pip/: expected_output_data.json
tests/collector/pipfile_transitive/: expected_output_data.json
tests/pipfile/: dependencies.json  deps_tests.yml
tests/pipfile/updated/: Pipfile
tests/poetry/: dependencies.json  deps_tests.yml
tests/poetry/original/: pyproject.toml
tests/poetry/updated/: pyproject.toml
tests/requirements/: dependencies.json  deps_tests.yml
