[tool.poetry]
name = "combine"
version = "2.1.1"
description = "A straightforward static site builder."
authors = ["Dropseed <python@dropseed.io>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "~2.25.1"
Jinja2 = "^3.0.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
